Removed {{ from week 07 description

--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ include:</p>
 <li>Best practices for creating functions</li>
 <li>Understand available tools for debugging functions</li>
 <li>Building functions using non-standard evaluation using the embrace
-paradigm <code>{{</code></li>
+paradigm</li>
 </ul>
 <div id="readings-5" class="section level4">
 <h4>📚 Readings</h4>
