Added week_01 slides link

--- a/index.html
+++ b/index.html
@@ -371,109 +371,24 @@ pre code {
 Data Analysis. The content will be updated each week.</p>
 <div id="schedule-links" class="section level2">
 <h2>‼️ Schedule &amp; Links</h2>
-<table>
-<colgroup>
-<col width="7%" />
-<col width="10%" />
-<col width="29%" />
-<col width="8%" />
-<col width="12%" />
-<col width="18%" />
-<col width="12%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Week</th>
-<th>Date</th>
-<th>Title</th>
-<th>Slides</th>
-<th>Assignment</th>
-<th>Due Date</th>
-<th>Survey</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>01</td>
-<td>9/26/22</td>
-<td><a href="#week-01---understanding-the-r-programming-environment">Understanding
-the R Programming Environment</a></td>
-<td></td>
-<td></td>
-<td>10/3/22, during class</td>
-<td></td>
-</tr>
-<tr class="even">
-<td>02</td>
-<td>10/3/22</td>
-<td><a href="#week-02---introduction-to-exploratory-data-analysis">Introduction
-to Exploratory Data Analysis</a></td>
-<td></td>
-<td></td>
-<td>10/10/22, 5:59 pm</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>03</td>
-<td>10/10/22</td>
-<td><a href="#week-03---introduction-to-the-tidyverse">Introduction to
-the tidyverse</a></td>
-<td></td>
-<td></td>
-<td>10/17/22, 5:59 pm</td>
-<td></td>
-</tr>
-<tr class="even">
-<td>04</td>
-<td>10/17/22</td>
-<td><a href="#week-04---data-cleaning-tools">Data cleaning
-tools</a></td>
-<td></td>
-<td></td>
-<td>10/24/22, 5:59 pm</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>05</td>
-<td>10/24/22</td>
-<td><a href="#week-05---joining--reshaping-datasets">Joining &amp;
-Reshaping Datasets</a></td>
-<td></td>
-<td></td>
-<td>10/31/22, 5:59 pm</td>
-<td></td>
-</tr>
-<tr class="even">
-<td>06</td>
-<td>10/31/22</td>
-<td><a href="#week-06---manipulation-of-strings-factors-and-datetimes">Manipulation
-of Strings, Factors, and Datetimes</a></td>
-<td></td>
-<td></td>
-<td>11/7/22, 5:59 pm</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>07</td>
-<td>11/7/22</td>
-<td><a href="#week-07---creating-functions">Creating Functions</a></td>
-<td></td>
-<td></td>
-<td>11/14/22, 5:59 pm</td>
-<td></td>
-</tr>
-<tr class="even">
-<td>08</td>
-<td>11/14/22</td>
-<td><a href="#week-08---functional-programming">Functional
-Programming</a></td>
-<td></td>
-<td></td>
-<td>11/21/22, 5:59 pm</td>
-<td></td>
-</tr>
-</tbody>
-</table>
+<div class="line-block">Week | Date | Title | Slides | Assignment | Due
+Date | Survey ||———-|———-|————-|———-|———-|———-|———-|<br />
+01 | 9/26/22 | <a href="#week-01---understanding-the-r-programming-environment">Understanding
+the R Programming Environment</a> | <a href="/week_01.html" title="Week 01 Slides">Link</a> | | 10/3/22, during class | |<br />
+02 | 10/3/22 | <a href="#week-02---introduction-to-exploratory-data-analysis">Introduction
+to Exploratory Data Analysis</a> | | | 10/10/22, 5:59 pm | |<br />
+03 | 10/10/22 | <a href="#week-03---introduction-to-the-tidyverse">Introduction to the
+tidyverse</a> | | | 10/17/22, 5:59 pm | |<br />
+04 | 10/17/22 | <a href="#week-04---data-cleaning-tools">Data cleaning
+tools</a> | | | 10/24/22, 5:59 pm | |<br />
+05 | 10/24/22 | <a href="#week-05---joining--reshaping-datasets">Joining
+&amp; Reshaping Datasets</a> | | | 10/31/22, 5:59 pm | |<br />
+06 | 10/31/22 | <a href="#week-06---manipulation-of-strings-factors-and-datetimes">Manipulation
+of Strings, Factors, and Datetimes</a> | | | 11/7/22, 5:59 pm | |<br />
+07 | 11/7/22 | <a href="#week-07---creating-functions">Creating
+Functions</a> | | | 11/14/22, 5:59 pm | |<br />
+08 | 11/14/22 | <a href="#week-08---functional-programming">Functional
+Programming</a> | | | 11/21/22, 5:59 pm | |</div>
 <p>All assignments are due by 5:59 pm of the upcoming week. For example,
 the assignment from Week 01 will be assigned on 10/3/22 and then will be
 due on 10/10/22 at 5:59 pm. The only exception is Week 01’s assignment,
